# cedar-forest-game

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
examples/: game_of_life.rs  ldtk.rs  random_map.rs  tmx.rs
src/: camera.rs  game.rs  game_ui.rs  helpers.rs  main.rs  menu.rs  mushroom.rs  splash.rs  ui.rs
src/helpers/: cleaning.rs
